--- a/libdev/src/Sidebar.css
+++ b/libdev/src/Sidebar.css
@@ -97,6 +97,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    box-shadow: 0 1px 8px 0 rgba(0,0,0,.06);
 }
 
 .sidebar-main .menu-category-list ul#product-cat-list.hide-product-cat-list {
