--- a/libdev/src/SimilarBooks.css
+++ b/libdev/src/SimilarBooks.css
@@ -1,19 +1,19 @@
-.thunk-recently_added-tab {
+.thunk-similar_books-tab {
     position: relative;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
-.thunk-recently_added-tab .thunk-heading-wrap {
+.thunk-similar_books-tab .thunk-heading-wrap {
     display: flex;
     -webkit-box-align: center;
 }
 
-.thunk-recently_added-tab .thunk-heading-wrap .thunk-heading {
+.thunk-similar_books-tab .thunk-heading-wrap .thunk-heading {
     width: 30%;
 }
 
-.thunk-recently_added-tab .thunk-heading-wrap .thunk-heading h4 {
+.thunk-similar_books-tab .thunk-heading-wrap .thunk-heading h4 {
     font-size: 18px;
     line-height: 29px;
     font-family: "Lato-Bold",sans-serif;
@@ -21,7 +21,7 @@
     margin: 0;
 }
 
-.thunk-recently_added-tab .thunk-heading-wrap .thunk-heading .title {
+.thunk-similar_books-tab .thunk-heading-wrap .thunk-heading .title {
     margin-bottom: 0;
     position: relative;
     display: inline-block;
@@ -30,7 +30,7 @@
     color: #111;
 }
 
-.thunk-recently_added-tab .content-wrap {
+.thunk-similar_books-tab .content-wrap {
     background: white;
     padding-top: 5px;
     padding-left: 10px;
@@ -38,7 +38,7 @@
     box-shadow: 0 1px 8px 0 rgba(0,0,0,.06);
 }
 
-.thunk-recently_added-tab .trendingProduct {
+.thunk-similar_books-tab .trendingProduct {
     position: relative;
     padding: 0;
     display: inline-block;
@@ -47,7 +47,7 @@
     padding-right: 6px !important;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card {
+.thunk-similar_books-tab .trendingProduct .product-card {
     width: 100%;
     height: 100%;
     display: block;
@@ -61,7 +61,7 @@
     position: relative;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card:hover {
+.thunk-similar_books-tab .trendingProduct .product-card:hover {
     z-index: 50;
     border-radius: 3px;
     text-decoration: none;
@@ -70,26 +70,26 @@
     transition: all .7s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card:hover .product-img>img {
+.thunk-similar_books-tab .trendingProduct .product-card:hover .product-img>img {
     -webkit-transform: scale(1.1);
     transition: all 0.5s ease;
     transform: scale(1.1);
     opacity: 0.9;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card:hover .product-name {
+.thunk-similar_books-tab .trendingProduct .product-card:hover .product-name {
     color: #c7511f;
     transition: all 0.3s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-img {
+.thunk-similar_books-tab .trendingProduct .product-card .product-img {
     text-align: center;
     position: relative;
     overflow: hidden;
     margin-bottom: 10px;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-img img {
+.thunk-similar_books-tab .trendingProduct .product-card .product-img img {
     max-width: 100%;
     max-height: 100%;
     height: auto !important;
@@ -97,7 +97,7 @@
     transition: all 0.5s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-name {
+.thunk-similar_books-tab .trendingProduct .product-card .product-name {
     color: #212121;
     max-height: 36px;
     text-overflow: ellipsis;
@@ -111,7 +111,7 @@
     transition: all 0.3s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-author {
+.thunk-similar_books-tab .trendingProduct .product-card .product-author {
     margin-top: 10px;
     color: #999;
     max-height: 34px;
@@ -125,7 +125,7 @@
     text-align: center;
 }
 
-.thunk-recently_added-tab .owl-theme .owl-nav{
+.thunk-similar_books-tab .owl-theme .owl-nav{
     position: absolute;
     top: 35%;
     z-index: 99999999;
@@ -134,8 +134,8 @@
     display: block;
 }
 
-.thunk-recently_added-tab .owl-nav button.owl-prev,
-.thunk-recently_added-tab .owl-nav button.owl-next {
+.thunk-similar_books-tab .owl-nav button.owl-prev,
+.thunk-similar_books-tab .owl-nav button.owl-next {
     position: absolute;
     cursor: pointer;
     border-radius: 50%;
@@ -149,8 +149,8 @@
     transition: all 0.2s ease-in;
 }
 
-.thunk-recently_added-tab .owl-nav button.owl-prev:hover,
-.thunk-recently_added-tab .owl-nav button.owl-next:hover {
+.thunk-similar_books-tab .owl-nav button.owl-prev:hover,
+.thunk-similar_books-tab .owl-nav button.owl-next:hover {
     background-color: #333;
     border: solid 0.5px #333;
     transition: all 0.2s ease-out;
@@ -158,15 +158,15 @@
     transform: scale(1.15);
 }
 
-.thunk-recently_added-tab .owl-nav button.owl-prev{
+.thunk-similar_books-tab .owl-nav button.owl-prev{
   left: 15px;
 }
-.thunk-recently_added-tab .owl-nav button.owl-next{
+.thunk-similar_books-tab .owl-nav button.owl-next{
   right: 15px;
 }
 
-.thunk-recently_added-tab .owl-nav button.owl-prev i,
-.thunk-recently_added-tab .owl-nav button.owl-next i {
+.thunk-similar_books-tab .owl-nav button.owl-prev i,
+.thunk-similar_books-tab .owl-nav button.owl-next i {
     display: block;
     width: 35px;
     height: 35px;
@@ -181,10 +181,10 @@
     transition: all 0.2s ease-out;
 }
 
-.thunk-recently_added-tab .owl-nav button.owl-next:hover i {
+.thunk-similar_books-tab .owl-nav button.owl-next:hover i {
     margin-left: 3px;
 }
 
-.thunk-recently_added-tab .owl-nav button.owl-prev:hover i {
+.thunk-similar_books-tab .owl-nav button.owl-prev:hover i {
     margin-left: -3px;
 }
