--- a/libdev/src/TrendingNow.css
+++ b/libdev/src/TrendingNow.css
@@ -35,6 +35,7 @@
     padding-top: 5px;
     padding-left: 10px;
     padding-right: 10px;
+    box-shadow: 0 1px 8px 0 rgba(0,0,0,.06);
 }
 
 .thunk-trending_now-tab .trendingProduct {
