--- a/libdev/src/AllCategory.css
+++ b/libdev/src/AllCategory.css
@@ -10,7 +10,7 @@
     margin: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
-    padding-left: auto;
+    padding-left: 0px;
     padding-right: auto;
 }
 
@@ -20,7 +20,7 @@
     margin-left: 10px;
     margin-right: 10px;
     text-align: left;
-    width: 229px;
+    width: 22%;
     font-size: 15px;
     text-transform: uppercase;
     list-style-type: none;
@@ -82,7 +82,7 @@
     max-height: 500px;
     padding-top: 10px;
     padding-bottom: 20px;
-    padding-left: auto;
+    padding-left: 0px;
     padding-right: auto;
     overflow: hidden;
     transition: all 1s ease;
@@ -97,7 +97,7 @@
 .main-area .category-table .category-table-content ul li {
     font-size: 14px;
     vertical-align: text-top;
-    width: 229px;
+    width: 25%;
     list-style-type: none;
     margin-left: auto;
     margin-right: auto;
@@ -114,6 +114,7 @@
 }
 
 .main-area .category-table .button-toggle {
+    cursor: pointer;
     background: #c80032;
     color: white;
     font-size: 23px;
@@ -135,4 +136,24 @@
     padding-bottom: 20px;
     -webkit-transform: scale(1.3);
     transition: all 0.2s ease-out
+}
+
+@media (max-width: 800px) {
+    .main-area .category-box>ul>li {
+        width: 28%;
+        font-size: 11px;
+    }
+    .main-area .category-table .category-table-content ul li {
+        width: 33%;
+    }
+}
+
+@media (max-width: 450px) {
+    .main-area .category-box>ul>li {
+        width: 40%;
+        font-size: 8px;
+    }
+    .main-area .category-table .category-table-content ul li {
+        width: 50%;
+    }
 }
