--- a/libdev/src/App.css
+++ b/libdev/src/App.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.app {
+  position: relative;
+}
+
 :focus {
   outline: none;
 }
@@ -120,4 +124,74 @@ select {
 .move-to-top-hide {
   opacity: 0 !important;
   visibility: hidden !important;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  padding-top: 50px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,.95);
+}
+
+.modal .modal-image {
+  margin: auto;
+  display: block;
+  /* width: 80%; */
+  height: 500px;
+  max-width: 700px;
+}
+
+.modal #caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  font-size: 20px;
+}
+
+.modal #modal-close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.modal #modal-close:hover,
+.modal #modal-close:focus {
+  color: #c80032;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  transform: scale(1.5) rotate(90deg);
+}
+
+.modal .modal-image, 
+.modal #caption,
+.modal #modal-close {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes zoom {
+  from {transform: scale(0)}
+  to {transform: scale(1)}
 }
