--- a/libdev/src/BookDetails.css
+++ b/libdev/src/BookDetails.css
@@ -3,7 +3,7 @@
     flex-flow: row;
     display: flex;
     box-sizing: border-box;
-    box-shadow: 0 1px 8px 0 rgba(0,0,0,.06);
+    box-shadow: 0 1px 8px 0 rgba(163, 90, 90, 0.06);
     margin-bottom: 30px;
 }
 
@@ -39,12 +39,20 @@
 
 .main-area-product-details .book-image-container img {
     display: inline-block;
+    cursor: pointer;
     max-width: 416px;
     max-height: 416px;
     vertical-align: top;
     position: inherit;
     height: auto; 
     width: 100%;
+    transition: all 0.3s ease;
+}
+
+.main-area-product-details .book-image-container img:hover {
+    opacity: 0.95;
+    box-shadow: 0 1px 5px 0 rgb(0,0,0);
+    transition: all 0.3s ease;
 }
 
 .main-area-product-details .book-button-container {
