--- a/libdev/src/SimilarBooks.css
+++ b/libdev/src/SimilarBooks.css
@@ -87,6 +87,7 @@
     position: relative;
     overflow: hidden;
     margin-bottom: 10px;
+    box-shadow: 0px 2px 5px 0px rgb(0,0,0,0.6);
 }
 
 .thunk-similar_books-tab .trendingProduct .product-card .product-img img {
