--- a/libdev/src/Header(Main).css
+++ b/libdev/src/Header(Main).css
@@ -135,6 +135,50 @@
     padding: 0 20px 0 20px;
 }
 
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover div.account-dropdown .clip {
+    position: absolute;
+    width: 0; 
+    height: 0;
+    left: 50%;
+    z-index: 1001;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #006c9e;
+}
+
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover div.account-dropdown {
+    position: absolute;
+    top: 45px;
+    left: -40px;
+    background-color: #fff;
+    min-width: 220px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    color: #111;
+    transition: all 0.3s ease;
+    max-height: 0;
+    overflow: hidden;
+    z-index: 1000;
+}
+
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover div.account-dropdown a {
+    color: #111;
+    font-size: 14px;
+    padding: 12px 5px 12px 12px;
+    font-weight: 500;
+    border-bottom: 1px solid #f0f0f0;
+    transition: all 0.3s ease;
+}
+
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover div.account-dropdown a:hover {
+    background-color: rgb(250,250,250);
+    transition: all 0.3s ease;
+}
+
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover:hover div.account-dropdown {
+    max-height: 230px;
+    transition: all 0.3s ease;
+}
+
 .main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a::after {
     position: absolute;
     top: 0;
