--- a/libdev/src/App.css
+++ b/libdev/src/App.css
@@ -142,6 +142,7 @@ select {
 .modal .modal-image {
   margin: auto;
   display: block;
+  z-index: 10000;
   /* width: 80%; */
   height: 500px;
   max-width: 700px;
