--- a/libdev/src/Sidebar.css
+++ b/libdev/src/Sidebar.css
@@ -11,6 +11,7 @@
     padding-top: 0px;
     padding-bottom: 1px;
     position: static;
+    box-shadow: 0 0 0 0 rgba(0,0,0,.15);
 }
 
 .sidebar-main .menu-category-list {
