--- a/libdev/src/RecentlyAdded.css
+++ b/libdev/src/RecentlyAdded.css
@@ -38,7 +38,7 @@
     box-shadow: 0 1px 8px 0 rgba(0,0,0,.06);
 }
 
-.thunk-recently_added-tab .trendingProduct {
+.trendingProduct {
     position: relative;
     padding: 0;
     display: inline-block;
@@ -47,7 +47,7 @@
     padding-right: 6px !important;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card {
+.trendingProduct .product-card {
     width: 100%;
     height: 100%;
     display: block;
@@ -61,7 +61,7 @@
     position: relative;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card:hover {
+.trendingProduct .product-card:hover {
     z-index: 50;
     border-radius: 3px;
     text-decoration: none;
@@ -70,19 +70,19 @@
     transition: all .7s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card:hover .product-img>img {
+.trendingProduct .product-card:hover .product-img>img {
     -webkit-transform: scale(1.1);
     transition: all 0.5s ease;
     transform: scale(1.1);
     opacity: 0.9;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card:hover .product-name {
+.trendingProduct .product-card:hover .product-name {
     color: #c7511f;
     transition: all 0.3s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-img {
+.trendingProduct .product-card .product-img {
     text-align: center;
     position: relative;
     overflow: hidden;
@@ -90,11 +90,11 @@
     box-shadow: 0px 2px 5px 0px rgb(0,0,0,0.6);
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-na {
+.trendingProduct .product-card .product-na {
     opacity: 0.5;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-img img {
+.trendingProduct .product-card .product-img img {
     max-width: 100%;
     max-height: 100%;
     height: auto !important;
@@ -102,7 +102,7 @@
     transition: all 0.5s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-img .not-available-container {
+.trendingProduct .product-card .product-img .not-available-container {
     position: absolute;
     left: 0;
     top: 65%;
@@ -117,11 +117,11 @@
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.12);
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-img .not-available-container>span {
+.trendingProduct .product-card .product-img .not-available-container>span {
     color: #dd1c1c;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-name {
+.trendingProduct .product-card .product-name {
     color: #212121;
     max-height: 36px;
     text-overflow: ellipsis;
@@ -135,7 +135,7 @@
     transition: all 0.3s ease;
 }
 
-.thunk-recently_added-tab .trendingProduct .product-card .product-author {
+.trendingProduct .product-card .product-author {
     margin-top: 10px;
     color: #999;
     max-height: 34px;
