--- a/libdev/src/LoadingComponent.css
+++ b/libdev/src/LoadingComponent.css
@@ -1,44 +1,71 @@
-.loading2 {
-    background-color: #f1f1f1;
-    text-align: center;
+.loader {
     z-index: 100000;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 100vw;
+    background: #042104;
+    animation: animateBg 10s linear infinite;
+}
+
+.loading2 {
+    position: absolute;
+    top: calc(50%-60px);
+    left: 50%;
+    width: 120px;
+    height: 120px;
+}
+
+.loading2 span {
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    transform: rotate(calc(18deg * var(--i) - 18deg));
 }
 
-.loading2 i {
-    font-size: 70px;
+.loading2 span::before {
+    content: ' ';
     position: absolute;
-    top: 50%;
-    animation: rotating 1.5s infinite, myanimation 1.5s infinite;
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
+    background: #00ff0a;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #00ff0a,
+                0 0 20px #00ff0a,
+                0 0 40px #00ff0a,
+                0 0 60px #00ff0a,
+                0 0 80px #00ff0a,
+                0 0 100px #00ff0a;
+    transform: scale(0);
+    animation: animate 2s linear infinite;
+    animation-delay: calc(0.1s * var(--i));
 }
 
-@keyframes myanimation {
-    0% {color: #f50f13;}
-    25%{color:#FF4917;}
-    50%{color:#E66E12;}
-    75%{color:#FCA208;}
-    100% {color: #f50f13;}
+@keyframes animateBg {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    100% {
+        filter: hue-rotate(360deg);
+    }
 }
 
-@keyframes rotating {
-    from {
-        -ms-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -webkit-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-      }
-      to {
-        -ms-transform: rotate(359deg);
-        -moz-transform: rotate(359deg);
-        -webkit-transform: rotate(359deg);
-        -o-transform: rotate(359deg);
-        transform: rotate(359deg);
-      }
+@keyframes animate {
+    0% {
+        transform: scale(1);
+    }
+    80%,100% {
+        transform: scale(0);
+    }
 }
