--- a/libdev/src/LoadingComponent.css
+++ b/libdev/src/LoadingComponent.css
@@ -52,6 +52,24 @@
     animation-delay: calc(0.1s * var(--i));
 }
 
+.loading3 {
+    z-index: 100000000;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+    background: #fff;
+}
+
+.loading3 i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #dd1c1c;
+}
+
 @keyframes animateBg {
     0% {
         filter: hue-rotate(0deg);
