--- a/libdev/src/Header(Sticky).css
+++ b/libdev/src/Header(Sticky).css
@@ -226,7 +226,8 @@
     border-radius: 3px;
 }
 
-.sticky-header-col3>.thunk-icon>.header-icon a.myaccount-hover div.account-dropdown a {
+.sticky-header-col3>.thunk-icon>.header-icon a.myaccount-hover div.account-dropdown a,
+.sticky-header-col3>.thunk-icon>.header-icon a.myaccount-hover div.account-dropdown div.logout {
     text-align: left;
     display: block;
     color: #111;
@@ -237,7 +238,8 @@
     transition: all 0.3s ease;
 }
 
-.sticky-header-col3>.thunk-icon>.header-icon a.myaccount-hover div.account-dropdown a:hover {
+.sticky-header-col3>.thunk-icon>.header-icon a.myaccount-hover div.account-dropdown a:hover,
+.sticky-header-col3>.thunk-icon>.header-icon a.myaccount-hover div.account-dropdown div.logout:hover {
     background-color: rgb(250,250,250);
     transition: all 0.3s ease;
 }
