--- a/libdev/src/LoadingComponent.css
+++ b/libdev/src/LoadingComponent.css
@@ -55,8 +55,8 @@
 .loading3 {
     z-index: 100000000;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     top: 0;
     left: 0;
     opacity: 0.5;
@@ -68,6 +68,17 @@
     top: 50%;
     left: 50%;
     color: #dd1c1c;
+    font-size: 50px;
+    animation: animateBg 2s linear infinite, spinning 2s linear infinite;
+}
+
+@keyframes spinning {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(359deg);
+    }
 }
 
 @keyframes animateBg {
