--- a/libdev/src/MyAccount.css
+++ b/libdev/src/MyAccount.css
@@ -20,6 +20,7 @@
     vertical-align: middle;
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
 
 .side-nav-bar .navbar-div1 .welcome-container .profile-name-container {
@@ -63,7 +64,8 @@
     background-color: #f0f5f5 !important;
 }
 
-.side-nav-bar .navbar-div2 .navigate>a>div {
+.side-nav-bar .navbar-div2 .navigate>a>div,
+.side-nav-bar .navbar-div2 .navigate>div {
     font-size: 14px;
     padding: 12px 5px 12px 12px;
     cursor: pointer;
@@ -74,11 +76,11 @@
     transition: all 0.3s ease;
 }
 
-.side-nav-bar .navbar-div2 .logout-button>a>div {
+.side-nav-bar .navbar-div2 .logout {
     background-color: #f9f9f9;
 }
 
-.side-nav-bar .navbar-div2 .navigate>a>div:hover {
+.side-nav-bar .navbar-div2 .logout:hover>div {
     background-color: #f5faff;
     transition: all 0.3s ease;
 }
