--- a/libdev/src/Header(Main).css
+++ b/libdev/src/Header(Main).css
@@ -235,7 +235,8 @@
     font-size: 11px;
 }
 
-.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a span:nth-of-type(2) {
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a span:nth-of-type(2),
+.main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover>span {
     display: initial;
     font-weight: 700;
     font-size: 13px;
@@ -304,6 +305,7 @@
         font-size: 8px;
     }
     .main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a span:nth-of-type(2),
+    .main-header .main-header-bar .main-header-col3 .thunk-icon-market .header-icon a.myaccount-hover>span,
     .main-header .main-header-bar .main-header-col3 .thunk-icon-market .cart-icon .cart-contents .cart-content {
         font-size: 10px;
     }
