--- a/libdev/src/BookDetails.css
+++ b/libdev/src/BookDetails.css
@@ -76,7 +76,8 @@
     list-style: none;
 }
 
-.main-area-product-details .book-button-container li>button {
+.main-area-product-details .book-button-container li>button,
+.main-area-product-details .book-button-container li>a {
     padding: 18px 8px;
     border-radius: 2px;
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
@@ -84,7 +85,7 @@
     border: none;
     float: left;
     background: #ff9700;
-    color: #fff;
+    color: #fff !important;
     text-transform: uppercase;
     font-size: 16px;
     cursor: pointer;
@@ -92,6 +93,7 @@
 }
 
 .main-area-product-details .book-button-container li>button:hover,
+.main-area-product-details .book-button-container li>a:hover,
 .main-area-product-details .book-button-container li>form>button:hover {
     box-shadow: 0 4px 6px 0 rgba(0,0,0,.12);
     transition: all 0.4s ease;
