--- a/libdev/src/LoadingComponent.css
+++ b/libdev/src/LoadingComponent.css
@@ -53,10 +53,11 @@
 }
 
 .loading3 {
+    overflow: hidden;
     z-index: 100000000;
     position: absolute;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     top: 0;
     left: 0;
     opacity: 0.5;
