--- a/libdev/src/Wishlist.css
+++ b/libdev/src/Wishlist.css
@@ -82,18 +82,24 @@
     padding-bottom: 20px;
 }
 
-.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action a {
+.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action>span>div {
     display: flex;
     color: #888;
 }
 
-.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action a .cross {
+.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action>span>div:hover {
+    color: #dd1c1c;
+    transition: all 0.3s ease;
+}
+
+.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action>span>div .cross {
     transition: all 0.3s ease;
     margin-right: 10px;
 }
 
-.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action a:hover .cross {
+.wishlist-page .wishlist-product .wishlist-product-details .wishlist-product-action>span>div:hover .cross {
     transition: all 0.3s ease;
+    /* color: #dd1c1c; */
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
