--- a/libdev/src/App.css
+++ b/libdev/src/App.css
@@ -130,7 +130,7 @@ select {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1000;
+  z-index: 10000000;
   top: 0;
   left: 0;
   padding-top: 50px;
@@ -143,7 +143,7 @@ select {
 .modal .modal-image {
   margin: auto;
   display: block;
-  z-index: 10000;
+  z-index: 100000000;
   /* width: 80%; */
   height: 500px;
   max-width: 700px;
@@ -186,6 +186,53 @@ select {
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
   animation-duration: 0.6s;
+}
+
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 10000;
+  left: 50%;
+  bottom: 30px;
+  font-size: 17px;
+  z-index: -1;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  z-index: 10000;
+  box-shadow: 5px 5px 15px -2px rgba(50, 50, 50, 0.82);
+  -webkit-box-shadow: 5px 5px 15px -2px rgba(50, 50, 50, 0.82);
+-moz-box-shadow: 5px 5px 15px -2px rgba(50, 50, 50, 0.82);
+}
+
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0; z-index: -1;} 
+  to {bottom: 30px; opacity: 1; z-index: 10000;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0; z-index: -1;}
+  to {bottom: 30px; opacity: 1; z-index: 10000;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1; z-index: 10000;} 
+  to {bottom: 0; opacity: 0; z-index: -1;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1; z-index: 10000;}
+  to {bottom: 0; opacity: 0; z-index: -1;}
 }
 
 @-webkit-keyframes zoom {
