--- a/libdev/src/PreferredTopics.css
+++ b/libdev/src/PreferredTopics.css
@@ -52,6 +52,38 @@
     max-height: 300px;
 }
 
+.thunk-preferred_topics-tab .thunk-slide .thunk-topic-wrap .thunk-topic .thunk-topic-image .thunk-topic-name-container {
+    position: absolute;
+    top: 70%;
+    width: 100%;
+}
+
+.thunk-preferred_topics-tab .thunk-slide .thunk-topic-wrap .thunk-topic .thunk-topic-image .thunk-topic-name-container .thunk-topic-name-wrapper {
+    position: relative;
+    width: 80%;
+    padding: 5px 0;
+    margin: 0 auto;
+    background: rgba(0,0,0,0.12);
+    border-radius: 4px;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .3), 0 7px 17px 0 rgba(23,84,116,0.18);
+    filter: brightness(100%);
+    color: #000;
+    font-weight: 500;
+    text-align: center;
+}
+
+.thunk-preferred_topics-tab .thunk-slide .thunk-topic-wrap .thunk-topic .thunk-topic-image .thunk-topic-name-container .thunk-topic-name-wrapper::before {
+    position: absolute;
+    z-index: 99;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    filter: blur(1px);
+}
+
 .thunk-preferred_topics-tab .owl-theme .owl-nav{
     position: absolute;
     top: 35%;
