--- a/libdev/src/Home.css
+++ b/libdev/src/Home.css
@@ -33,6 +33,10 @@
     padding-top: 0;
 }
 
+.content-wrap .container .main-area .primary-content-area section:first-of-type {
+    margin: 0px !important;
+}
+
 .content-wrap .container .main-area .primary-content-area section {
     clear: both;
     margin: 30px 0;
